--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,11 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: toast_schedule_dev
   pool: 5
-  timeout: 5000
+  username: devman 
+  password: RapKucVor1
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
